<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="E_MessageType" Id="{20af1a0a-b57d-4fe5-84aa-a4ae8286bce0}">
    <Declaration><![CDATA[{attribute 'strict'}
{attribute 'to_string'}
TYPE E_MessageType :
(
  eMessageEmpty,
  eMessageInfo,
  eMessageWarn,
  eMessageError
)DINT;
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>