<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL_AXIS_CTRL" Id="{2e6c7eeb-bb49-4966-9aa0-6282cf36de89}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL CONSTANT

{IF defined (WIN)}
  {info 'WIN folders'}
  gcsLogDir         : STRING := 'C:\TwinCAT\#MsgFiles\';
{ELSE}
  {info 'BSD folders'}
  gcsLogDir         : STRING := '/usr/local/etc/TwinCAT/#MsgFiles/';
{END_IF}

  gcsLogFile        : STRING := 'Msg_PlcOpenDrive_';

  gciMaxMessage     : INT := 200; // max entry in message list
  gciMaxAxis        : INT :=  3;

{IF defined (CAM)}
  {info 'camming active'}
  cCam                  : BOOL := TRUE;
{ELSE}
  {info 'camming NOT active'}
  cCam                  : BOOL := FALSE;
{END_IF}

  
//V 00.07
//04.11.2021
//HauD
// GearIn, GearOut added

// V 00.08
//24.03.2022
//HauD
// simple ptp movement with only one instance of MC functionblock
// file writing for logging now globally enable/disable
// intern message list is always used
// ref in property deleted
// axis pointer is used


// V 00.09
// 25.03.2022
// HAUD
// parameter handling changed
// NULL initialization of methods implemented

// V 00.10 - V 00.11
// 29.03.2022
// HAUD
// TEST

// V 00.12
// 29.03.2022
// HAUD
// Merge TEST and server version
// Visu page for message diag
// OP state before ADS READ on NC Axis
// INIT logging at startup
// enum to_string with use of 4024 compiler

// V 00.13
// 14.04.2022
// CamIn and CamOut added
// Changed Compiler Version to 3.1.4024.0. This is needed to enable conditional pragmas

// V 00.14
// 03.06.2022
// GearInMultiMaster added

// V 00.15
// 29.06.2022
// HAUD
// defines deleted, defines in code do not work, therefore all defines for camming deleted
// stop method in FB_McPtPAxis added.

// V00.16
// 30.06..2022
// HAUD
// FB_AxisController, code refactoring
//    Axis function states are now calling corresponding actions to improve readability
// SS1 stop with static check (SEL)

// V00.17
// 18.07.2022
// HAUD
// CAM_OUT now with FB check instead of mapping check

// V00.18
// 19.07.2022
// Axis startup, changes according to test
// ADS communication to AxisName changed, ADS Err 1796

// V00.19
// 27.07.2022
// HAUD
// Axis startup expanded to Encodertype for automatic Sercos selection
// fb_AxisController.bSercosAxis changed from input to output var
// CamOut checked with logging for couple state

// V00.20
// 27.07.2022
// HAUD
// Axis startup AdsRead.ERR automatic re-startup

// V00.21
// 06.10.2022
// HAUD
// test case for MOVE_VELO; HALT
// Halt() with standstill check
// MOVE_VELO, fbMoveEndless.Position feed check
// AXIS_HALT, standstill control with timeout and RESET
// AXIS_MOVE_BUFFER_VELO, two instances changing velocity during function execution, if required velo is reached, done OR keep function alive and change to velo2 and wait for done


// V00.22
// 13.10.2022
// HAUD
// AXIS_HALT standstill check changed to NotMoving

// V00.23
// 14.10.2022
// HAUD
// AXIS_MOVE_VELO - chsnged to MC_Velocity; Ctrl.iDirection is evaluated, 1 - positive; 3 - negative

// V00.24
// 15.10.2022
// HAUD
// code revision from testing
// Compiler def TEST      - TwinSAFE Alias device muted
// Compiler def AXIS_MAP  - cyclic mapping ST_AxisController
// Compiler def WIN       - windows file names for logging

// V00.25
// 15.10.2022
// HAUD
// Compiler def CAM      - contitional activation of camming lib
// MC_Camming lib now optional

// V00.26
// 16.10.2022
// HAUD
// cam folder missing, added by push
// property of MC2_Camming.lib is set to optional
// Compiler def:  - TEST      [forces SafetyOK internally]
//                - AXIS_MAP  [ST_AxisController will be mapped variable --> connection to second TEST_PLC]
//                - WIN       [windows file names are used]
//                - CAM       [MC2_Camming.lib is active --> if entry is not present, empty FBs are used]

// V00.27
// 19.10.2022
// HAUD
// R/W of axis parameter now possible without safety bit from Alias Device

// V00.28
// 20.10.2022
// HAUD
// GearOut and Disable are available during safety off.

// V00.30
// 23.10.2022
// HAUD
// NCI implementation of for basic use with g-Code files

// V00.32
// 25.10.2022
// HAUD
// consistent Datatypes for NCI define

// V00.33
// 25.10.2022
// HAUD
// NCI() call added to TaskReference
// NCI() works the ADS interface
// cyclic interface for NCI channels as global data structs
// plausibility checks

// V00.34
// 25.10.2022
// HAUD
// compiler defines test

// V00.35
// 25.10.2022
// HAUD
// BUG fb_AxisController.bSS1 state bereinigt

// V00.36
// 25.10.2022
// HAUD
// defines for test cases with mapping to extern plc
// 

// V00.37
// 25.10.2022
// HAUD
// defines for test cases with mapping to extern plc
// properties in fb_Ctrl_NciChannel are now using fb Instance of FB_NciChannel
// R Parameter window limited to 10

// V00.38
// 25.10.2022
// HAUD
// testing

// V00.39
// 31.10.2022
// HAUD
// quit of M function now on cyclic interface
// new member in ST_STATE_NCI  .ItpState - Interpreter state from cyclic NCI channel interfacwe 

// V00.40
// 02.11.2022
// HAUD
// testing

// V00.41
// 18.01.2023
// - BufferMode switch for e_AxisFunction.AXIS_MOVE_BUFFER and AXIS_MOVE_BUFFER_VELO

// V00.42
// HAUD
// 14.03.2023
// CAM_OUT check changed to strict eval

// V00.43
// HAUD
// 17.03.2023
// MC_BufferModes, additional error check in FB_McPtpAxis added (MoveAbsolute 1&2)

// V00.44
// HAUD
// 17.03.2023
// code review for missing stState.uiErrorId information to extern

// V00.45
// HAUD
// 27.03.2023
// debug for missing stState.uiErrorId information to extern
//
// 31.03.2023
// Axis_Cam_Out; ignore fb_CamOut error, retry if still coupled

// V00.46
// HAUD
// 05.04.2023
// Axis_Cam_Out; ignore axis function if not coupled
// fbAxis.pAxisRef^.NcToPlc.CoupleState added to ST_OUT

// V00.47
// HAUD
// 27.04.2023
// draft for redesign Camming lib implementation
// fb_CamIn_V2 replaces fb_CamIn

// V00.48 new branch on git server
// HAUD
// 26.05.2023
// ST_In; ST_Out change REAL --> LREAL

// V00.48.01
// HAUD
// 17.10.2023
// more than 100 Axis declared in project --> ADS handles can not be created for all axis, StartUp FB_McPtpAxis stopps with error, manual reset required --> changed to closer monitoring and retry
// FB_McPtpAxis.StartupError    - added if ADS Read error, StartUp error state wait for Reset
// FB_McPtpAxis.ErrorReset      - added StartUp error state reset (restarts StartUp state machine)
// FB_AxisController.Axis_Init  - state machine is checked for fbAxis.StartUpError, automatic axis reset and retry

// V00.50.1
// HAUD
// 19.10.2023
// CAMMING implementation with table manipulation
// redesign for modular use --> FB_AxisController does not host camming lib
// interface implementation for downward compatibility

// V00.48.93
// HAUD
// 15.02.2024
// Buffered moves with additional info on ST_Out.rSetPos

// V00.50.2
// HAUD
// 07.03.2024
// merge changes from field V 00.48.95
// buffered move
// message handling



  Version           : STRING := 'V 00.50.2';
END_VAR
VAR_GLOBAL

  gfbAxisController : ARRAY[1..gciMaxAxis] OF FB_AxisController;  // cyclic interface for accepting and executing orders
  gstAxisControl    : ARRAY[1..gciMaxAxis] OF ST_AxisController;  // structure for cyclic interface


{IF defined (AXIS_MAP)}
  {info 'TEST ST_AxisController'}
  gstAxisParam                 AT %I* : ARRAY[1..gciMaxAxis] OF ST_NcParam;         // R/W struct for a single parameter
  gstHomeParam                 AT %I* : ARRAY[1..gciMaxAxis] OF ST_HomeParams;      // homing parameter for each axis

  gstAxisCamParam              AT %I* : ARRAY[1..gciMaxAxis] OF ST_CamIn;
  gstAxisGearParam             AT %I* : ARRAY[1..gciMaxAxis] OF ST_GearIn;
  gstAxisGearMultiMasterParam  AT %I* : ARRAY[1..gciMaxAxis] OF ST_GearInMultiMaster;

  gstMotionOptions             AT %I* : ARRAY[1..gciMaxAxis] OF ST_MotionOptions;
{ELSE}
  gstAxisParam                        : ARRAY[1..gciMaxAxis] OF ST_NcParam;         // R/W struct for a single parameter
  gstHomeParam                        : ARRAY[1..gciMaxAxis] OF ST_HomeParams;      // homing parameter for each axis

  gstAxisCamParam                     : ARRAY[1..gciMaxAxis] OF ST_CamIn;
  gstAxisGearParam                    : ARRAY[1..gciMaxAxis] OF ST_GearIn;
  gstAxisGearMultiMasterParam         : ARRAY[1..gciMaxAxis] OF ST_GearInMultiMaster;

  gstMotionOptions                    : ARRAY[1..gciMaxAxis] OF ST_MotionOptions;
{END_IF}

  // diag data
  gbyAxisIdxGearIn              : ARRAY[1..gciMaxAxis]      OF BYTE; // diag for Axis gear in
  
  gbyAxisIdxGearInMultiMaster   : ARRAY[1..gciMaxAxis,1..4] OF BYTE; // diag for Axis gear in multi master
  
  gbyAxisIdxCamIn               : ARRAY[1..gciMaxAxis]      OF BYTE; // diag for Axis cam in


  gatMessages       : ARRAY[1..gciMaxMessage] OF ST_Message;
  giMsgIndex        : INT := 1;
  giErrorIndex      : INT := 0;

  gfbLocalTime      : fb_LocalTime;
  gdtLocalTime      : DT;
  gsLocalTime       : STRING;

{IF defined (AXIS_MAP)}
  {info 'TEST ST_AxisController'}
  gbEnableLogging   : BOOL := TRUE;
{ELSE}
  gbEnableLogging   : BOOL;
{END_IF}
END_VAR


]]></Declaration>
  </GVL>
</TcPlcObject>