<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="f_MessageSet" Id="{8eeea270-a0d8-4f12-86b6-de12ddb529a1}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION f_MessageSet : BOOL
VAR_INPUT
  stMessage   : ST_Message;
END_VAR
VAR
  uiIndex   : INT;
  uiFound   : INT;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[stMessage.tTime := GVL_AXIS_CTRL.gsLocalTime;

FOR uiIndex := 1 TO GVL_AXIS_CTRL.gciMaxMessage
DO
  IF (GVL_AXIS_CTRL.gatMessages[uiIndex].eType = e_MessageType.eMessageEmpty)
  THEN
    GVL_AXIS_CTRL.gatMessages[uiIndex] := stMessage;
    GVL_AXIS_CTRL.giMsgIndex := uiIndex;
    EXIT;
  END_IF
END_FOR

IF (stMessage.eType = E_MessageType.eMessageError)
THEN
  GVL_AXIS_CTRL.giErrorIndex := GVL_AXIS_CTRL.giErrorIndex + 1;
END_IF
]]></ST>
    </Implementation>
    <LineIds Name="f_MessageSet">
      <LineId Id="104" Count="0" />
      <LineId Id="152" Count="0" />
      <LineId Id="130" Count="8" />
      <LineId Id="161" Count="0" />
      <LineId Id="141" Count="0" />
      <LineId Id="162" Count="2" />
      <LineId Id="7" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>